WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78104
[GTK] Fix a crash when WebKitWebView is created without a WebContext
https://bugs.webkit.org/show_bug.cgi?id=78104
Summary
[GTK] Fix a crash when WebKitWebView is created without a WebContext
Carlos Garcia Campos
Reported
2012-02-08 04:50:00 PST
WebContext is a construct only property of WebKitWebView. webkit_web_view_new() passes the default web context as g_object_new parameter. If a web view is created with g_object_new without passing the web context parameter (which is a normal situation when creating objects derived from WebKitWebView), the default value for GObject propetrties is set (NULL). In webkitWebViewConstructed we assume the view already has a web context and it crashes if it hasn't.
Attachments
Patch
(1.62 KB, patch)
2012-02-08 04:52 PST
,
Carlos Garcia Campos
pnormand
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2012-02-08 04:52:10 PST
Created
attachment 126060
[details]
Patch
WebKit Review Bot
Comment 2
2012-02-08 04:55:34 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3
2012-02-08 08:31:33 PST
Committed
r107092
: <
http://trac.webkit.org/changeset/107092
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug