[GTK] Fix a crash when WebKitWebView is created without a WebContext https://bugs.webkit.org/show_bug.cgi?id=78104

Reviewed by Philippe Normand.

* UIProcess/API/gtk/WebKitWebView.cpp:
(webkitWebViewSetProperty): Make sure WebKitWebView:web-context
property is initialized to the default web context when a web
context is not passed to g_object_new().
* UIProcess/API/gtk/tests/TestWebKitWebView.cpp:
(testWebViewDefaultContext): Check that a web view created with
g_object_new has the default context.

Canonical link: https://commits.webkit.org/95004@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107092 268f45cc-cd09-0410-ab3c-d52691b4dbfc